# Webpage-Sidebar

./: .gitignore  Cargo.toml  gulpfile.js  package.json
extension/: manifest.json
extension/launcher/: launcher.css
src/: manifest.json
webextensions_api/: Cargo.toml
ws_launcher/: Cargo.toml
ws_launcher/src/: lib.rs  main.rs
ws_launcher/src/components/: mod.rs  siteinput.rs  siteline.rs
ws_launcher/src/pages/: mod.rs  sitelistpage.rs
ws_launcher/static/: index.html  launcher.html
ws_model/: Cargo.toml
ws_model/src/: lib.rs  site.rs  types.rs
ws_storage/: Cargo.toml
ws_storage/src/: lib.rs  main.rs  webextensions.rs
